# depcheck

./: .gitignore  .prek.toml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
depcheck/: __init__.py  advisories.py  audit.py  budget.py  bundle.py  check.py  cli.py  compat.py  config.py  conflicts.py  depdrift.py  depsize.py  diff.py  doctor.py  explain.py  export.py  github_pr.py  graph.py  history.py  isolate.py  licenses.py  lockfile.py  models.py  osv.py  outdated.py  output.py  pin.py  pinpoint.py  policy.py  predict.py  pypi.py  remediate.py  repomap.py  resolve.py  risks.py  scanner.py  scorecard.py  search.py  size.py  sizescore.py  (+9 more)
docs/plans/: 2026-06-20-workspace-monorepo-support.md
tests/: test_audit.py  test_budget.py  test_bundle.py  test_check.py  test_config.py  test_conflicts.py  test_depsize.py  test_diff.py  test_doctor.py  test_explain.py  test_export.py  test_github_annotations.py  test_graph.py  test_history.py  test_license_policy.py  test_licenses.py  test_lockfile.py  test_new_modules.py  test_new_modules_pr15.py  test_osv.py  test_outdated.py  test_output.py  test_pin.py  test_pinpoint.py  test_predict.py  test_remediate.py  test_repomap.py  test_resolve.py  test_scanner.py  test_scorecard.py  test_search.py  test_size.py  test_stack.py  test_suggest.py  test_tree.py  test_verify_integrity.py  test_watch.py  test_why.py  test_workspace.py
